--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
-
 <resources>
+
     <style name="Theme.AstralJourney" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/md_theme_light_primary</item>
         <item name="colorOnPrimary">@color/md_theme_light_onPrimary</item>
@@ -28,4 +28,10 @@
         <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
     </style>
+
+
+    <style name="Widget.Toolbar.AstralJourney.Title" parent="TextAppearance.Material3.ActionBar.Title">
+        <item name="fontFamily">@font/abril_fatface</item>
+    </style>
+
 </resources>
