--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -28,4 +28,15 @@
         <item name="colorSurfaceInverse">@color/md_theme_dark_inverseSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_dark_inversePrimary</item>
     </style>
+
+
+    <style name="Widget.Toolbar.AstralJourney.Title" parent="TextAppearance.Material3.ActionBar.Title">
+        <item name="fontFamily">@font/abril_fatface</item>
+    </style>
+
+    <style name="Widget.Text.List" parent="TextAppearance.Material3.HeadlineLarge">
+        <item name="fontFamily">@font/abril_fatface</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 </resources>
