--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,4 +34,10 @@
         <item name="fontFamily">@font/abril_fatface</item>
     </style>
 
+    <style name="Widget.Text.List" parent="TextAppearance.Material3.HeadlineLarge">
+        <item name="fontFamily">@font/abril_fatface</item>
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
 </resources>
