--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav"
     app:startDestination="@id/horoscopeScreen">
 
     <fragment
         android:id="@+id/horoscopeScreen"
         android:name="com.example.astraljourney.ui.main.horoscope.HoroscopeScreen"
-        android:label="HoroscopeScreen" />
+        android:label="HoroscopeScreen" >
+        <action
+            android:id="@+id/action_horoscopeScreen_to_horoscopoDetailActivity"
+            app:destination="@id/horoscopoDetailActivity" />
+    </fragment>
     <fragment
         android:id="@+id/palmstryScreen2"
         android:name="com.example.astraljourney.ui.main.palmstry.PalmstryScreen"
@@ -16,4 +21,13 @@
         android:id="@+id/luckScreen2"
         android:name="com.example.astraljourney.ui.main.luck.LuckScreen"
         android:label="LuckScreen" />
+    <activity
+        android:id="@+id/horoscopoDetailActivity"
+        android:name="com.example.astraljourney.ui.main.horoscopodetail.HoroscopoDetailActivity"
+        android:label="activity_horoscopo_detail"
+        tools:layout="@layout/activity_horoscopo_detail" >
+        <argument
+            android:name="type"
+            app:argType="com.example.astraljourney.domain.ZodiacModel" />
+    </activity>
 </navigation>
