--- a/app/src/main/res/layout/activity_horoscopo_detail.xml
+++ b/app/src/main/res/layout/activity_horoscopo_detail.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/animation_background_color"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,15 +21,14 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/ivToolbarBackground"
-        android:layout_width="0dp"
+        android:layout_width="600dp"
         android:layout_height="200dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detailToolbar"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/aries_anim"
         app:lottie_repeatMode="restart" />
 
 
